<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pipette_driver</name>
  <version>0.0.0</version>
  <description>Pipette driver with ros2_control hardware interface</description>
  <maintainer email="xiao.yuan0217@gmail.com">eric</maintainer>
  <license>Apache-2.0</license>

  <!-- Python dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- Build dependencies for Python package -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
